<?xml version="1.0"?>
<package format="2">
  <name>asv_gazebo</name>
  <version>0.2.0</version>
  <description>The asv_gazebo package</description>

  <maintainer email="akash.p1997@gmail.com">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>asv_description</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>asv_description</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
